Replace text social links
Updated social links to use icons instead of text.

--- a/index.html
+++ b/index.html
@@ -1042,9 +1042,9 @@
                 </div>
                 
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/suba-suresh" target="_blank" class="social-link" title="LinkedIn">in</a>
-                    <a href="https://github.com/suba-suresh" target="_blank" class="social-link" title="GitHub">GH</a>
-                    <a href="mailto:subasuresh8095@gmail.com" class="social-link" title="Email">✉</a>
+                    <a href="https://www.linkedin.com/in/suba-suresh" target="_blank" class="social-link" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/suba-suresh" target="_blank" class="social-link" title="GitHub"><i class="fa-brands fa-github"></i></a>
+                    <a href="mailto:subasuresh8095@gmail.com" class="social-link" title="Email"><i class="fa-solid fa-message"></i></a>
                 </div>
             </div>
 
