--- a/index.html
+++ b/index.html
@@ -1042,9 +1042,9 @@
                 </div>
                 
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/suba-suresh" target="_blank" class="social-link" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://github.com/suba-suresh" target="_blank" class="social-link" title="GitHub"><i class="fa-brands fa-github"></i></a>
-                    <a href="mailto:subasuresh8095@gmail.com" class="social-link" title="Email"><i class="fa-solid fa-message"></i></a>
+                    <a href="https://www.linkedin.com/in/subasuresh" target="_blank" class="social-link" title="LinkedIn"></a><i class="fa-brands fa-linkedin"></i>
+                    <a href="https://github.com/suba-suresh" target="_blank" class="social-link" title="GitHub"></a><i class="fa-brands fa-github"></i>
+                    <a href="mailto:subasuresh8095@gmail.com" class="social-link" title="Email"></a><i class="fa-solid fa-message"></i>
                 </div>
             </div>
 
