--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suba Suresh - Software Developer & AI Automation Specialist</title>
     <meta name="description" content="Software Developer specializing in C#, .NET, WPF, and AI Automation. View my projects and experience.">
+    <script src="kit.fontawesome.com" crossorigin="anonymous"></script>
     <style>
         * {
             margin: 0;
@@ -1042,9 +1043,9 @@
                 </div>
                 
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/subasuresh" target="_blank" class="social-link" title="LinkedIn"></a><i class="fa-brands fa-linkedin"></i>
-                    <a href="https://github.com/suba-suresh" target="_blank" class="social-link" title="GitHub"></a><i class="fa-brands fa-github"></i>
-                    <a href="mailto:subasuresh8095@gmail.com" class="social-link" title="Email"></a><i class="fa-solid fa-message"></i>
+                    <a href="https://www.linkedin.com/in/subasuresh" target="_blank" class="social-link" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/suba-suresh" target="_blank" class="social-link" title="GitHub"><i class="fa-brands fa-github"></i></a>
+                    <a href="mailto:subasuresh8095@gmail.com" class="social-link" title="Email"><i class="fa-regular fa-message"></i></i></a>
                 </div>
             </div>
 
