Update skills and work experience details

--- a/index.html
+++ b/index.html
@@ -781,7 +781,6 @@
                 <h3>Cloud & Integration</h3>
                 <div class="skill-tags">
                     <span class="skill-tag">Azure</span>
-                    <span class="skill-tag">AWS</span>
                     <span class="skill-tag">Google Calendar API</span>
                     <span class="skill-tag">Gmail API</span>
                     <span class="skill-tag">Airtable</span>
@@ -982,8 +981,8 @@
         <h2>Work Experience</h2>
         <div class="timeline">
             <div class="timeline-item">
-                <h3>Software Developer | AI Automation Developer</h3>
-                <div class="company">Crown Street Food</div>
+                <h3>Software Developer</h3>
+                <div class="company">SaiHarini Ltd</div>
                 <div class="date">September 2024 - Present | Royal Leamington Spa, UK</div>
                 <ul>
                     <li>Architected enterprise Sales Tracking System using C#, WPF, Entity Framework 6, and SQL Server with MVVM pattern, achieving 40% faster query performance through optimized stored procedures</li>
